<resources>
    <string name="app_name">Proyecto2</string>
    <string name="cedula">Cédula</string>
    <string name="agregar">Agregar</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="guardar">Guardar</string>
    <string name="limpiar">Limpiar</string>
    <string name="numero">No.</string>
    <string name="crear">Crear Persona</string>
    <array name="Opciones">
        <item>@string/crear</item>
        <item>@string/listarPersonas</item>
    </array>
    <string name="listarPersonas">Listar Personas</string>
    <string name="exito1">Persona Guardada Exitosamente!</string>

</resources>
